Bug 1139270 - mark kGMPOutputDownscaled keys able to decrypt. r=cpearce a=lmandel